--- a/public-site/site/_style/objects.body-text.scss
+++ b/public-site/site/_style/objects.body-text.scss
@@ -2,6 +2,18 @@
   line-height: 1.7;
 }
 
+.o-body-text h1:not(:first-of-type) {
+  border-top: 4px solid var(--color-control-outline);
+  padding: 1.5em 0 .75em 0;
+}
+
+.o-body-text h2 {
+  border-top: 1px solid var(--color-control-outline);
+  margin: 0;
+  padding: 1.5em 0 .75em 0;
+}
+
+
 .o-body-text p {
   margin: 1.7em 0;
 }
